<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preguntas">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="254dp"
        android:layout_height="76dp"
        android:layout_marginTop="60dp"
        android:text="@string/p2t1"
        android:textSize="26sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/preg1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="32dp">

        <RadioButton
            android:id="@+id/p2p1r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/p1r1" />

        <RadioButton
            android:id="@+id/p2p1r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="verificarespuesta"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/p1r2" />

        <RadioButton
            android:id="@+id/p2p1r3"
            android:layout_width="wrap_content"
            android:onClick="verificarespuesta"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/p1r3" />
    </RadioGroup>

    <Button
        android:id="@+id/p2btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/p2b1"
        android:onClick="verificarespuesta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>